# QtKinoveaAnalyse

./: .gitignore  CMakeLists.txt  QtKinoveaAnalyse.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  results.cpp  results.h  results.ui
src/: Body.cpp  Body.h  CenterOfMass.cpp  CenterOfMass.h  Frame.cpp  Frame.h  GenericBody.cpp  GenericBody.h  Joint.cpp  Joint.h  JointKinematics.cpp  JointKinematics.h  KinoMath.cpp  KinoMath.h  KinoveaReader.cpp  KinoveaReader.h  Landmark.cpp  Landmark.h  Point2d.cpp  Point2d.h  ProportionalModel.cpp  ProportionalModel.h  QCallout.cpp  QCallout.h  Segment.cpp  Segment.h  Winter.cpp  Winter.h  XmlReader.cpp  XmlReader.h  mainwindow.cpp  mainwindow.h  results.cpp  results.h
ui/: mainwindow.ui  results.ui
xmlExamples/: WinterSagittal.xml  box_jump_with_missing_frames.xml
